Fix cart and z-index issues

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -3,7 +3,7 @@
 .mini-cart
   position: absolute
   top: 0
-  right: 50px
+  right: 25px
   display: block
 
 #cart .cart_holder
