--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -7,7 +7,7 @@
   text-align: center
   position: sticky
   top: 0
-  z-index: 999
+  z-index: 3
   
   @media screen and (max-width: $break-small)
     margin-bottom: 40px
